refactor: migrate gui, helper and item package to NeoForge 1.21.1